# wx_hello

./: .gitignore  README.md  cabal.project  wx-hello.cabal
app/: Main.hs
